--- a/data/list.html
+++ b/data/list.html
@@ -28,7 +28,7 @@
     </p>
 
     <p id="common">
-    0.name = "_manager"; 0.version = 5.501; 0.devonly = False; 0.release = "20241202"; 0.text = "사용자용 패키지 매니저입니다."; 0.num = 5;<br>
+    0.name = "manager"; 0.version = 5.501; 0.devonly = False; 0.release = "20241202"; 0.text = "사용자용 패키지 매니저입니다."; 0.num = 5;<br>
     1.name = "kscriptc"; 1.version = 5.501; 1.devonly = False; 1.release = "20241204"; 1.text = "kscript 컴파일러와 외부함수 패키지입니다."; 1.num = 1;<br>
     2.name = "iconpack"; 2.version = 5.501; 2.devonly = False; 2.release = "20241204"; 2.text = "아이콘 모음집입니다."; 2.num = 1;<br>
     3.name = "videopack"; 3.version = 5.501; 3.devonly = False; 3.release = "20241204"; 3.text = "동영상 관련 도구들입니다."; 3.num = 19;<br>
